# file-extensioner

./: .gitignore  Cargo.toml
src/: main.rs
