[package]
name = "file-extensioner"
version = "0.1.0"
edition = "2021"
description = "A cli for adding and removing file extensions based on file inspection"
license = "MIT"
repository = "https://github.com/graysonarts/file-extensioner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = [ "cargo" ] }
infer = "0.11.0"

[dev-dependencies]
cargo-release = "0.23.1"
